Added my name on header.

--- a/todos/templates/_header.html
+++ b/todos/templates/_header.html
@@ -30,6 +30,9 @@
               <a class="nav-link p-0" href="/" >WINTER CODING 인턴십 개발 과제
                 <span class="sr-only">(current)</span></a>
             </h2>
+            <h4 style="text-align:center">
+                [웹] - 위준영
+            </h4>
           </li>
         </ul>
       </div>
